<resources>
    <string name="app_name">To-Do</string>
    <string name="action_sort_date">Sort by date</string>
    <string name="action_sort_todo">Sort by description</string>
    <string name="action_grp_cat">Sort by category</string>
    <string name="action_save">Save</string>
    <string name="action_restore">Restore</string>
    <string name="do_b4">Do before: </string>
    <string name="task_done">Done</string>
    <string name="due_date">Due date: </string>
    <string name="to_do_desc">Description: </string>
    <string name="category">Category: </string>
    <string name="add">Add</string>
    <string name="date_fm">YYYY-MM-DD</string>
</resources>
