<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:background="@android:drawable/dialog_holo_light_frame">

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            app:layout_constraintBaseline_toBaselineOf="@+id/todoText"
            android:checked="false"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.533"
            android:text="@string/task_done"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_help"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.477"
            android:contentDescription="@string/app_name"
            app:layout_constraintVertical_bias="0.283"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/todoText"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.231"
            android:textAlignment="viewStart"/>

    <TextView
            android:text="@string/do_b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeToDoText"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/todoText"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateText"
            app:layout_constraintStart_toEndOf="@+id/timeToDoText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/timeToDoText"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="8dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.75"/>

</androidx.constraintlayout.widget.ConstraintLayout>